# g-etl

./: .dockerignore  .duckdbrc  .env.example  .gitignore  BUILD.md  CLAUDE.md  Dockerfile.nuitka  INTEGRATION.md  README.md  Taskfile.yml  devbox.json  docker-compose.yml  nuitka.md  pyproject.toml  roadmap.md  setup.bat  setup.sh  task.md  temp.sql
.github/workflows/: build.yml  ci.yml  release.yml
config/: __init__.py  config.yml  datasets.md  datasets.yml  kallor.txt  readme.md  settings.py
docker/: Dockerfile.admin  Dockerfile.dbt  Dockerfile.runtime  Dockerfile.web  docker-compose.runtime.yml  docker-compose.yml  readme.md
docker/huey/: Dockerfile
docs/: H3_POLYGON_ANALYSIS.md  WFS_TROUBLESHOOTING.md  architecture.md  development.md  tasks.md
migrations/: 20251223184625_init.sql
notebooks/: README.md  pipeline.py
plugins/: README.md  __init__.py  base.py  geopackage.py  geoparquet.py  lantmateriet.py  mssql.py  wfs.py  zip_geopackage.py  zip_shapefile.py
qgis_plugin/: README.md  __init__.py  deps.py  dialog.py  g_etl_plugin.py  metadata.txt  qgis_runner.py  runner.py
scripts/: db.py  export_h3.py  pipeline.py  sql_generator.py
scripts/admin/: app.py
scripts/admin/models/: dataset.py
scripts/migrations/: __init__.py  cli.py  migrator.py
scripts/web/: __init__.py  app.py
sql/_init/: 01_extensions.sql  02_schemas.sql  03_macros.sql
sql/examples/: h3_polygon_queries.sql
sql/mart/zzz_end/: 01_end.sql  (+1 more)
sql/migrations/: 001_db_extensions.sql  002_db_schemas.sql  003_db_makros.sql  003_macros.sql  004_staging_procedure.sql  004_staging_transform_template.sql  005_staging2_normalisering_template.sql  005_staging_normalisering_template.sql  006_mart_h3_cells_template.sql  007_mart_compact_h3_cells_template.sql  100_mart_h3_index_merged.sql
src/g_etl/: __init__.py  config_loader.py  export.py  export_h3.py  h3_query.py  pipeline.py  settings.py  sql_generator.py
taskfiles/: admin.yml  dbt.yml  docker.yml  duckdb.yml  pipeline.yml  python.yml  qgis.yml  release.yml  web.yml
tests/: __init__.py  conftest.py  test_config_loader.py  test_heatmap_widget.py  test_plugins.py  test_settings.py  test_sql_generator.py  test_utils_downloader.py  test_utils_logging.py
tests/qgis/: __init__.py  test_deps.py  test_plugin_build.py  test_qgis_runner.py  test_runner.py
(+114 files in other folders)
