[project]
name = "g-etl"
version = "0.1.0"
description = "DuckDB ETL-stack for geodata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "geopandas>=1.0.0",
    "pyarrow>=17.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "textual>=0.89.0",
    "pyyaml>=6.0.0",
    "pytz>=2024.1",
    "pyodbc>=5.0.0",
    "h3>=3.7.0",
]

[project.scripts]
g-etl = "g_etl.admin.app:main"

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "harlequin>=2.0.0"]
build = ["pyinstaller>=6.0.0"]
viz = ["folium>=0.17.0"]

[dependency-groups]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "harlequin>=2.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# tomt eller andra inställningar, men ingen dev-dependencies här längre
